@@ -34,10 +34,7 @@ class GeneralRequest;
 class GeneralResponse;
 }
 
-////////////////////////////////////////////////////////////////////////////////
 /// @brief action result
-////////////////////////////////////////////////////////////////////////////////
-
 class TRI_action_result_t {
  public:
   TRI_action_result_t() : isValid(false), canceled(false) {}
@@ -46,10 +43,7 @@ class TRI_action_result_t {
   bool canceled;
 };
 
-////////////////////////////////////////////////////////////////////////////////
 /// @brief action descriptor
-////////////////////////////////////////////////////////////////////////////////
-
 class TRI_action_t {
  public:
   TRI_action_t()
@@ -77,29 +71,17 @@ class TRI_action_t {
   bool _allowUseDatabase;
 };
 
-////////////////////////////////////////////////////////////////////////////////
 /// @brief defines an action
-////////////////////////////////////////////////////////////////////////////////
+std::shared_ptr<TRI_action_t> TRI_DefineActionVocBase(std::string const& name,
+                                                      std::shared_ptr<TRI_action_t> action);
 
-TRI_action_t* TRI_DefineActionVocBase(std::string const& name,
-                                      TRI_action_t* action);
-
-////////////////////////////////////////////////////////////////////////////////
 /// @brief looks up an action
-////////////////////////////////////////////////////////////////////////////////
+std::shared_ptr<TRI_action_t> TRI_LookupActionVocBase(arangodb::GeneralRequest* request);
 
-TRI_action_t* TRI_LookupActionVocBase(arangodb::GeneralRequest* request);
-
-////////////////////////////////////////////////////////////////////////////////
 /// @brief deletes all defined actions
-////////////////////////////////////////////////////////////////////////////////
-
 void TRI_CleanupActions();
 
-////////////////////////////////////////////////////////////////////////////////
 /// @brief visit all actions
-////////////////////////////////////////////////////////////////////////////////
-
 void TRI_VisitActions(std::function<void(TRI_action_t*)> const& visitor);
 
 #endif
