@@ -1037,23 +1037,19 @@ static void JS_DefineAction(v8::FunctionCallbackInfo<v8::Value> const& args) {
   }
 
   // create an action with the given options
-  v8_action_t* action = new v8_action_t();
-  ParseActionOptions(isolate, v8g, action, options);
+  auto action = std::make_shared<v8_action_t>();
+  ParseActionOptions(isolate, v8g, action.get(), options);
 
   // store an action with the given name
-  TRI_action_t* result = TRI_DefineActionVocBase(name, action);
+  // note: this may return a previous action for the same name
+  std::shared_ptr<TRI_action_t> actionForName = TRI_DefineActionVocBase(name, action);
+  
+  v8_action_t* v8ActionForName = dynamic_cast<v8_action_t*>(actionForName.get());
 
-  // and define the callback
-  if (result != nullptr) {
-    action = dynamic_cast<v8_action_t*>(result);
-
-    if (action != nullptr) {
-      action->createCallback(isolate, callback);
-    } else {
-      LOG_TOPIC(WARN, arangodb::Logger::FIXME) << "cannot create callback for V8 action";
-    }
+  if (v8ActionForName != nullptr) {
+    v8ActionForName->createCallback(isolate, callback);
   } else {
-    LOG_TOPIC(ERR, arangodb::Logger::FIXME) << "cannot define V8 action";
+    LOG_TOPIC(WARN, arangodb::Logger::FIXME) << "cannot create callback for V8 action";
   }
 
   TRI_V8_RETURN_UNDEFINED();
