@@ -314,93 +314,6 @@ bool UpgradeTasks::setupAnalyzers(
   return ::createSystemCollection(&vocbase, "_iresearch_analyzers");
 }
 
-bool UpgradeTasks::createRouting(
-    TRI_vocbase_t& vocbase,
-    arangodb::velocypack::Slice const& slice
-) {
-  return ::createSystemCollection(&vocbase, "_routing");
-}
-
-bool UpgradeTasks::insertRedirections(
-    TRI_vocbase_t& vocbase,
-    arangodb::velocypack::Slice const& slice
-) {
-  std::vector<std::string> toRemove;  // remove in a different trx
-  auto cb = [&toRemove](VPackSlice const& doc) {
-    TRI_ASSERT(doc.isObject());
-    VPackSlice url = doc.get("url"), action = doc.get("action");
-    if (url.isObject() && action.isObject() &&
-        action.get("options").isObject()) {
-      VPackSlice v = action.get("options").get("destination");
-      if (v.isString()) {
-        std::string path = v.copyString();
-        if (path.find("_admin/html") != std::string::npos ||
-            path.find("_admin/aardvark") != std::string::npos) {
-          toRemove.push_back(doc.get(StaticStrings::KeyString).copyString());
-        }
-      }
-    }
-  };
-
-  auto res = methods::Collections::all(vocbase, "_routing", cb);
-
-  if (res.fail()) {
-    THROW_ARANGO_EXCEPTION(res);
-  }
-
-  auto ctx = transaction::StandaloneContext::Create(vocbase);
-  SingleCollectionTransaction trx(ctx, "_routing", AccessMode::Type::WRITE);
-
-  res = trx.begin();
-
-  if (!res.ok()) {
-    THROW_ARANGO_EXCEPTION(res);
-  }
-
-  OperationOptions opts;
-
-  opts.waitForSync = true;
-
-  for (std::string const& key : toRemove) {
-    VPackBuilder b;
-    b(VPackValue(VPackValueType::Object))(StaticStrings::KeyString,
-                                          VPackValue(key))();
-    trx.remove("_routing", b.slice(), opts);  // check results
-  }
-
-  std::vector<std::string> paths = {"/", "/_admin/html",
-                                    "/_admin/html/index.html"};
-  std::string dest = "/_db/" + vocbase.name() + "/_admin/aardvark/index.html";
-  OperationResult opres;
-
-  for (std::string const& path : paths) {
-    VPackBuilder bb;
-    bb.openObject();
-    bb.add("url", VPackValue(path));
-    bb.add("action", VPackValue(VPackValueType::Object));
-    bb.add("do", VPackValue("@arangodb/actions/redirectRequest"));
-    bb.add("options", VPackValue(VPackValueType::Object));
-    bb.add("permanently", VPackSlice::trueSlice());
-    bb.add("destination", VPackValue(dest));
-    bb.close();
-    bb.close();
-    bb.add("priority", VPackValue(-1000000));
-    bb.close();
-    opres = trx.insert("_routing", bb.slice(), opts);
-    if (opres.fail()) {
-      THROW_ARANGO_EXCEPTION(opres.result);
-    }
-  }
-
-  res = trx.finish(opres.result);
-
-  if (!res.ok()) {
-    THROW_ARANGO_EXCEPTION(res);
-  }
-
-  return true;
-}
-
 bool UpgradeTasks::setupAqlFunctions(
     TRI_vocbase_t& vocbase,
     arangodb::velocypack::Slice const& slice
